--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "js/src/suite",
   "dependencies": {
+    "Promise": "aleclarson/Promise#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
     "jasmine": "aleclarson/jasmine#2.3.5",
-    "log": "aleclarson/log#1.0.0",
-    "q": "aleclarson/q#1.0.0"
+    "log": "aleclarson/log#1.0.0"
   },
   "lotus": {
     "plugins": [
