--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "lotus-jasmine",
   "version": "1.0.0",
-  "main": "js/src/suite",
+  "main": "js/suite",
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee -cb -o js src",
+    "postinstall": "postinstall-build js 'npm run build'"
+  },
   "dependencies": {
     "Promise": "aleclarson/Promise#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
     "jasmine": "aleclarson/jasmine#2.3.5",
-    "log": "aleclarson/log#1.0.0"
+    "log": "aleclarson/log#1.0.0",
+    "postinstall-build": "0.2.x"
   },
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
+  "devDependencies": {
+    "coffee-script": "1.9.x"
   }
 }
