--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lotus-jasmine",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "js/suite",
   "plugins": [
     "lotus-coffee"
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
-    "jasmine": "aleclarson/jasmine#2.3.5"
+    "jasmine": "aleclarson/jasmine#2.3.5",
+    "performance-now": "^2.1.0"
   }
 }
